# picsellia-pipelines-cli

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: detect-cli-template-changes.yaml  detect-template-changes.yaml  publish.yaml  templates-ci.yaml  test-templates.yaml
picsellia_cli/: cli.py  main.py
picsellia_cli/commands/: build_and_push_processing.py  docker_pipeline.py  pipeline_deployer.py  pipeline_initializer.py  pipeline_manager.py  pipeline_tester.py  processing.py  push_processing_on_picsellia.py  session.py  test_processing.py
picsellia_cli/commands/processing/: __init__.py  deployer.py  initializer.py  launcher.py  smoke_tester.py  syncer.py  tester.py
picsellia_cli/commands/processing/templates/: data_auto_tagging_template.py  datalake_autotagging_template.py  dataset_version_creation_template.py  model_conversion_template.py  pre_annotation_template.py  (+1 more)
picsellia_cli/commands/training/: __init__.py  deployer.py  initializer.py  launcher.py  smoke_tester.py  tester.py
picsellia_cli/utils/: base_template.py  collect_params.py  deployer.py  dockerfile_generation.py  env_utils.py  initializer.py  logging.py  pipeline_config.py  prompt.py  run_manager.py  runner.py  session_manager.py  smoke_tester.py  templates.py  tester.py  validation.py
src/picsellia_pipelines_cli/: main.py
src/picsellia_pipelines_cli/commands/: auth.py
src/picsellia_pipelines_cli/utils/: deployer.py  env_utils.py  inputs.py  pipeline_config.py  smoke_tester.py  tester.py
tests/: script.sh
tests/processing/data_auto_tagging/: config.toml
tests/processing/datalake/: config.toml  run_config.toml
tests/processing/dataset_version/: config.toml  run_config.toml
tests/processing/dataset_version_creation/: config.toml
tests/processing/model_conversion/: config.toml  run_config.toml
tests/processing/model_version/: config.toml  run_config.toml
tests/processing/pre_annotation/: config.toml
tests/training/simple/: config.toml  run_config.toml
tests/training/yolov8/: config.toml  run_config.toml
(+31 files in other folders)
