[project]
name = "picsellia-pipelines-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "SoniaGrh",email = "sonia.garrouch@hotmail.fr"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "picsellia (>=6.20.0,<7.0.0)",
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "picsellia_cli"},
]
