[project]
name = "picsellia-pipelines-cli"
version = "0.1.0"
description = ""
authors = [
    {name = "SoniaGrh",email = "sonia.garrouch@hotmail.fr"}
]
readme = "README.md"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [
    { include = "picsellia_cli"},
]

[tool.poetry.dependencies]
python = "^3.10"
picsellia = ">=6.20.0,<7.0.0"
typer = ">=0.15.2,<0.16.0"
tinydb = "^4.8.2"
docker = "^7.1.0"
pre-commit = "^4.2.0"

[tool.poetry.scripts]
pipeline-cli = "picsellia_cli.main:app"
