[project]
name = "picsellia-pipelines-cli"
version = "0.1.2"
description = ""
authors = [
    { name = "SoniaGrh", email = "sonia.garrouch@hotmail.fr" }
]
readme = "README.md"
requires-python = ">=3.10,<3.14"

dependencies = [
    "picsellia>=6.20.0,<7.0.0",
    "typer>=0.15.2,<0.16.0",
    "toml>=0.10.2,<1.0",
    "dotenv>=0.9.9,<1.0",
    "semver>=3.0.0,<4.0.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0"
]

[project.scripts]
pxl-pipeline = "picsellia_pipelines_cli.main:app"

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # pyflakes
    "I", # isort
    "C", # flake8-comprehensions
    "B", # flake8-bugbear
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long, handled by black
]
